--- a/index.html
+++ b/index.html
@@ -607,7 +607,7 @@ body {
       </div>
     </a>
 
-    <a href="https://remarkable-trifle-b2b303.netlify.app/" class="card" target="_blank">
+    <a href="https://newlist-eta.vercel.app/" class="card" target="_blank">
       <div class="preview-icon"><i class="fas fa-eye"></i></div>
       <div class="card-content">
         <span class="card-number">05</span>
